[package]
name = "chess_bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
owlchess = "0.2.0"
chess = "3.2.0"
shakmaty = "0.21.2"
pleco = "0.5.0"
cozy-chess = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false

[lib]
bench = false

[profile.dev.build-override]
opt-level = 1

[profile.release.build-override]
opt-level = 1
