[package]
name = "chess_bench"
version = "0.1.0"
edition = "2021"
publish = false
description = "A set of tools to test and benchmark various chess implementations"
authors = ["Alexander Kernozhitsky <kernalex256@yandex.by>"]
readme = "README.md"
homepage = "https://github.com/alex65536/chess_bench"
repository = "https://github.com/alex65536/chess_bench"
license = "GPL-3.0-or-later"
keywords = ["games", "chess", "test", "benchmark"]
categories = ["games"]

[dependencies]
arrayvec = "0.7.4"
clap = { version = "4.3.19", features = ["derive"] }
sha2 = "0.10.7"
hex-literal = "0.3.4"

# Chess implementations
owlchess = { version = "0.3.0", features = ["selftest"] }
chess = "3.2.0"
shakmaty = "0.26.0"
pleco = "0.5.0"
cozy-chess = "0.3.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false

[lib]
bench = false

[profile.dev.build-override]
opt-level = 1

[profile.release.build-override]
opt-level = 1

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
